                              HISTORY

 This is a non exhaustive list of changes in the PyEdPro project. Git has
 a more complete list of logs.

    Thu Jan 09 2020   (version 1.0)
    setup.py and company

    Wed Jan 08 2020   (version 1.0)
    pango dirs and cleanup

    Wed Dec 25   (version 0.95)
    Spell check - loading 8 bit clean; Capitalize resoration

    Wed Dec 24
    Harmonized py 2 and py 3 differences - unicode mess cleaned up

    xx Nov 2019
    Switched to Ubuntu as main platform

    Mon Sep 2 2019
    Reload yes/no dialog, old buffer saved in backup dir

    Sun Sep 1 2019
    fixed cdir on load

    Mon Aug 12 2019
    added terminal right click shortcut

  may-08-2019   (0.71)

    Tested OK on running it in a windows DOS box.

    o Some path inconsistencies (corrected with os.sep)
    o Killed controlling 'terminal' aka DOS box for cleaner operation
    o Updated About dialog to show build date and platform
    o Pop-up for r-click spell check on windows corrected (went out of scope)

  mar-29-2019

  .h files parsed as .c
  multi select on custom file load (alt-o)
  fixed coloring anomaly on color on / off

  mar-05-2019    (0.70)

    Mouse scroll added shift / ctrl to accelerate
    Key Up/Down added shift / ctrl to accelerate
    Still V.67

 feb-13-2019

    Solved jump on parse local
    solved FIFO on search Alt-Left Alt-Right
    V.67

 feb-03-2019

    Added readme section for installing python-gi-cairo

UPDATES:

   PyGTK 3 changed a lot of things ... workig on port

   PyGTK 2.24 (latest at the time of writing) has a bug on not delivering
double click to the window. Down-graded to 2.22.x, works flawlessly.

   Lots of functions added. Attempted to make it tablet friendly. Drag
on screen now does what you would expect from a tablet.

   My laptop keyboard broke, so I added Ctrl-H for left arrow j, k, l
for the other arrows (like in vim) so the defective keys are substituted
with vi compatible navigation.
